<resources>
    <string name="app_name"></string>

    <string name="im_audio_input">按住 说话</string>
    <string name="im_audio_input_hover">松开 发送</string>

    <!--视频相关-->
    <string name="video_long_click">轻触拍照,长按摄像</string>
    <string name="video_need_video_permission">需要录音权限！</string>
    <!--视频相关-->

    <string name="im_add_new_language">＋添加新的常用语</string>
    <string name="im_add_language">添加常用语</string>
    <string name="im_add_language_length_tip">%d/120</string>
    <string name="up_for_cancel">手指上滑，取消发送</string>
    <string name="want_to_cancel">松开手指，取消发送</string>
    <string name="time_too_short">录音时间过短</string>
    <string name="long_click_record">长按 录音</string>
    <string name="hang_up_finish">松开 结束</string>
    <string name="release_cancel">松开 取消</string>
    <string name="delete">删除</string>
    <string name="tip_permission">请授予全部权限</string>

    <string name="cancel">取消</string>
    <string name="submit">确定</string>

    <string name="pickerview_cancel">取消</string>
    <string name="pickerview_submit">确定</string>
    <string name="pickerview_year">年</string>
    <string name="pickerview_month">月</string>
    <string name="pickerview_day">日</string>
    <string name="pickerview_hours">时</string>
    <string name="pickerview_minutes">分</string>
    <string name="pickerview_seconds">秒</string>

    <string name="im_empty_tip">暂无聊天内容</string>

    <string name="gallery_app_name">gallery</string>
    <string name="gallery_save">保存</string>
    <string name="gallery_save_picture_permission_request_failed">写存储卡权限申请失败, 无法保存图片</string>
    <!--选择外部定位-->
    <string name="dialog_choose_gaode">高德地图</string>
    <string name="dialog_choose_baidu">百度地图</string>
    <string name="dialog_choose_tencent">腾讯地图</string>
    <string name="dialog_cancel">取消</string>
    <string name="format_time">%d:%02d</string>
    <string name="image_download_tip">图片保存至%s文件夹下</string>

    <string name="loaded_wait_moment">请稍候</string>
    <string name="loaded_wait_send">发送中，请稍候</string>
</resources>
