<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_white_radius_5"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/im_add_language"
        android:textColor="@color/common_black"
        android:textSize="18sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="15dp"
        android:background="@drawable/shape_gray_5_radius_5"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:padding="12dp">

        <EditText
            android:id="@+id/et_language_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_gray_5_radius_5"
            android:backgroundTint="@null"
            android:cursorVisible="false"
            android:hint="例：我是江西的牌照，你们店能卖吗？"
            android:maxLength="120"
            android:textColor="@color/common_black"
            android:textColorHint="@color/common_gray_2"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_language_add_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:text="@string/im_add_language_length_tip"
            android:textColor="@color/common_gray_2"
            android:textSize="12sp" />
    </RelativeLayout>

    <include layout="@layout/include_line_divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/common_gray_2"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/submit"
            android:textColor="@color/common_green_1"
            android:textSize="16sp" />

    </LinearLayout>


</LinearLayout>
